tests/baselines/reference/genericSpecializations2.errors.txt
tests/cases/compiler/genericSpecializations2.ts(8,9): error TS2368: Type parameter name cannot be 'string'.
tests/cases/compiler/genericSpecializations2.ts(12,9): error TS2368: Type parameter name cannot be 'string'.


==== tests/cases/compiler/genericSpecializations2.ts (2 errors) ====
    class IFoo<T> {
        foo<T>(x: T): T { // no error on implementors because IFoo's T is different from foo's T
            return null;
        }
    }
    
    class IntFooBad implements IFoo<number> {
        foo<string>(x: string): string { return null; }
            ~~~~~~
!!! error TS2368: Type parameter name cannot be 'string'.
    }
    
    class StringFoo2 implements IFoo<string> {
        foo<string>(x: string): string { return null; }
            ~~~~~~
!!! error TS2368: Type parameter name cannot be 'string'.
    }
    
    class StringFoo3 implements IFoo<string> {
        foo<T>(x: T): T { return null; }
    }
    
    